--- a/css/CSS3/layout/layout_css.html
+++ b/css/CSS3/layout/layout_css.html
@@ -8,29 +8,42 @@
             .image_container{
                 font-size: 0px;
             }
+
+            .left_container{
+              float:left;
+              background-color: blue;
+            }
+
+            .right_container{
+              float: right;
+              background-color: red;
+            }
+
+            .center_container{
+               background-color: yellow;
+            }
        </style>
     </head>
     <body>
     	<div class="left_container">
-            <img src="wu_1.jpg"/>
-            <img src="wu_2.jpg"/>
-            <img src="wu_3.jpg"/>
-            <img src="wu_4.jpg"/>
+            <ul>
+              <li>侧事故11</li>
+            </ul>
       </div>
 
-      <div class="center_container">
-            <img src="wu_1.jpg"/>
-            <img src="wu_2.jpg"/>
-            <img src="wu_3.jpg"/>
-            <img src="wu_4.jpg"/>
-      </div>
 
       <div class="right_container">
-            <img src="wu_1.jpg"/>
-            <img src="wu_2.jpg"/>
-            <img src="wu_3.jpg"/>
-            <img src="wu_4.jpg"/>
+            <ul>
+              <li>侧事故11</li>
+            </ul>
       </div>
+      
+      <div class="center_container">
+            <ul>
+              <li>侧事故11</li>
+            </ul>
+      </div>
+
     </body>
    
 </html>
