--- a/easy_ui/jquery-easyui-1.4.3/workspace/res/css/data_analysis.css
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/res/css/data_analysis.css
@@ -143,3 +143,7 @@ h2 {
     width: 70%;
     display: inline-block;
 }
+
+.section_ul  li, .selected-dimension, .selected-magnanimity{
+    cursor: move;
+}
