table mockdata complete

--- a/easy_ui/jquery-easyui-1.4.3/workspace/res/css/data_analysis.css
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/res/css/data_analysis.css
@@ -153,6 +153,10 @@ h2 {
     display: inline-block;
 }
 
+#new_analysis_dlg .field-value{
+    width: 70%;
+}
+
 .field-mid-value{
     display: inline-block;
 }
