--- a/easy_ui/jquery-easyui-1.4.3/workspace/res/css/data_analysis.css
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/res/css/data_analysis.css
@@ -64,8 +64,8 @@
 }
 
 .input-div{
-    height: 27px;
-    line-height: 27px;
+    height: 34px;
+    line-height: 34px;
     border:1px solid #ddd;
     position:relative;
     margin: 10px 0;
@@ -86,7 +86,7 @@
 }
 
 .selected-magnanimity{
-    background-color: #3c8b3c;
+    background-color: #a2bf8f;
 }
 .selected-dimension, .input-label{
     background-color: #dddfe4;
@@ -141,6 +141,10 @@ h2 {
     height: 25px;
     line-height: 25px;
     text-indent: 10px;
+}
+
+.field-div input[type=date] {
+    width: 130px;
 }
 
 .field-label{
@@ -268,7 +272,7 @@ h2 {
     clear: both;
 }
 
-.selected-dimension{
+.selected-dimension, .selected-magnanimity{
     position: relative;
 }
 
@@ -283,3 +287,6 @@ h2 {
     border-left: 4px solid transparent;
 }
 
+.tabs-container{
+    margin-right: 15px;
+}
