--- a/easy_ui/jquery-easyui-1.4.3/workspace/res/template/addSubjectDlg.html
+++ b/easy_ui/jquery-easyui-1.4.3/workspace/res/template/addSubjectDlg.html
@@ -29,8 +29,8 @@
       <div  class="field-div">
             <label class="field-label">选择数据时段:</label>
             <div  class="field-value" >
-            	<input id="from_date" type="date" ms-value=fromdate required="required">&nbsp;至&nbsp;
-				<input id="to_date" type="date" ms-value=todate required="required">
+            	<input id="from_date" type="date" ms-attr-value=fromdate required="required">&nbsp;至&nbsp;
+				<input id="to_date" type="date" ms-attr-value=todate required="required">
             </div>
       </div>
   </div>
@@ -41,8 +41,8 @@
 		<div  class="field-div">
 			<label class="field-label">访问日期</label>
 			<div  class="field-value" >
-				<input id="from_date_filter" type="date" ms-value=fromdate required="required">&nbsp;至&nbsp;
-				<input id="to_date_filter" type="date" ms-value=todate required="required">
+				<input id="from_date_filter" type="date" ms-attr-value=fromdate required="required">&nbsp;至&nbsp;
+				<input id="to_date_filter" type="date" ms-attr-value=todate required="required">
 			</div>
 		</div>
 	</div>
